--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title>Frutas e Vegetais</title>
 </head>
+
 <body>
-    
-        <div class="fundo">
-            <h1>Frutas e Vegetais</h1><br><br>
+    <div class="fundo">
+        <h1>Frutas e Vegetais</h1>
+        <br><br>
 
-    <button onclick="Frutas()" class="btn btn-outline-danger">Frutas</button>
-    <p id="mostrarFrutas"></p>
-         <br><br>
-   <div id="vegetais"></div>
-   <button ondblclick="Vegetais()" class="btn btn-outline-success">Vegetais</button>
+        <button onclick="MostrarFrutas()" class="btn btn-outline-danger">Frutas</button>
+        <p id="mostrarFrutas" class="mt-2 mb-3"></p>
 
+        <button ondblclick="MostrarVegetais()" class="btn btn-outline-success">Vegetais</button>
+        <p id="mostrarVegetais" class="mt-2 mb-3"></p>
 
-   <script src="js/index.js"></script>  
-
+    </div>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
